<resources>
    <string name="ApplicationName">SparkleBike</string>
    <string name="DeviceBridgeServiceName">CoSmartDeviceBridgeService</string>

    <string name="MainActivity_DrawerLayoutHideDesc">Hide Menu</string>
    <string name="MainActivity_DrawerLayoutShowDesc">Show Menu</string>
    <string name="MainActivity_DefaultFragment_NoRecord">No record</string>
    <plurals name="MainActivity_TabLayout_Unit_Device">
        <item quantity="zero">device</item>
        <item quantity="one">device</item>
        <item quantity="other">devices</item>
    </plurals>
    <plurals name="MainActivity_TabLayout_Unit_Group">
        <item quantity="zero">group</item>
        <item quantity="one">group</item>
        <item quantity="other">groups</item>
    </plurals>
    <plurals name="MainActivity_TabLayout_Unit_Area">
        <item quantity="zero">area</item>
        <item quantity="one">area</item>
        <item quantity="other">areas</item>
    </plurals>

    <string name="DiscoveryDeviceActivity_Item_Ignore">Ignore</string>

    <string name="SetingWindow_NetworkPermission_Title">Network</string>
    <string name="SetingWindow_NetworkPermission_Option_OnlyWiFi">Only WiFi</string>
    <string name="SetingWindow_NetworkPermission_Option_LANManagement">LAN Management</string>

    <string name="ScanningWindow_NoDeviceFound">No device found</string>
    <string name="ScanningWindow_DeviceCount_ZeroDevice">device</string>
    <string name="ScanningWindow_DeviceCount_OneDevice">device</string>
    <string name="ScanningWindow_DeviceCount_MoreDevice">devices</string>

    <string name="WiFiEnabledDialog_Title">WiFi disabled</string>
    <string name="WiFiEnabledDialog_Message">Please turn the WiFi on</string>
    <string name="WiFiEnabledDialog_Confirm">Confirm</string>
    <string name="WiFiEnabledDialog_Cancel">Cancel</string>
    <string name="APGuideDialog_Title">Guide to AP</string>
    <string name="APGuideDialog_SSID_Hint">AP SSID</string>
    <string name="APGuideDialog_Password_Hint">AP password</string>
    <string name="APGuideDialog_Rememeber_AP">Remember this AP</string>
    <string name="APGuideDialog_Confirm">Guide</string>
    <string name="APGuideDialog_Cancel">Cancel</string>
    <string name="SharedElementName_FloatingActionButton">FloatingActionButton</string>
    <string name="SharedElementName_TitleText">TitleText</string>
    <string name="SharedElementName_DeviceItem">DeviceItem</string>
    <string name="title_activity_device_details">DeviceDetailsActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_setting_window">Setting</string>
    <string name="title_activity_scanning_window">Scanning</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
